tests/neg/simple/cast-03.ts

var s: any = "";
var a = <number>s;
assert(false);
